--- a/index.html
+++ b/index.html
@@ -69,8 +69,49 @@
           </div>
         </div>
       </header>
-      <div class="mail__btn click">
+      <button class="mail__btn click">
         <i class="fa-solid fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll">
+        <div class="scroll__icon click">
+        
+        </div>
+      </a>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="orange">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/moviepix.png" class="project__img">
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description__title">
+                    MoviePix
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Tailwindcss, Javascript, React.js, Redux
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit a, asperiores quos laudantium deserunt odit omnis maxime, nobis necessitatibus quas. Quaerat a exercitationem adipisci dicta veniam itaque possimus sed, delectus saepe.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/owlthinkabtit/wk6finalv2.git" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://wk6finalv2.vercel.app/" class="project__description--link">
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
