Taking longer than what I planned. Just putting some finishing touches on the modals and animations.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jameka Haggins</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/993d4d649d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/993d4d649d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="landing-page">
       <nav>
         <figure>
-          <img id="personal-logo" src="./assets/logomeme.png" alt="" />
+          <img id="personal-logo" src="./assets/2947642.png" alt="" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
@@ -39,31 +42,48 @@
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ><i class="fas fa-adjust"></i></a>
+              ><i class="fas fa-adjust"></i
+            ></a>
           </li>
         </ul>
       </nav>
       <header class="header">
         <div class="header__content">
           <h1 class="title">Hey</h1>
-          <h1 class="title title--secondary"><b class="green">I'm Jameka.</b></h1>
+          <h1 class="title title--secondary">
+            <b class="green">I'm Jameka.</b>
+          </h1>
           <p class="header__para">
-            I'm a <b class="orange">Frontend Software Engineer</b> skilled 
-            in HTML, CSS, JavaScript, and React, with 10 years of IT support experience. 
-            <br>
-            Passionate about building responsive, accessible web applications and eager to 
-            bring technical expertise and problem-solving skills to create seamless user experiences.
-            <br>
+            I'm a <b class="orange">Frontend Software Engineer</b> skilled in
+            HTML, CSS, JavaScript, and React, with 10 years of IT support
+            experience.
+            <br />
+            Passionate about building responsive, accessible web applications
+            and eager to bring technical expertise and problem-solving skills to
+            create seamless user experiences.
+            <br />
             Here's a little more <b class="orange">about me</b>.
           </p>
           <div class="social__list">
-            <a href="https://www.linkedin.com/in/jamekahaggins" target="_blank" class="social__link click">
+            <a
+              href="https://www.linkedin.com/in/jamekahaggins"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/owlthinkabtit" target="_blank" class="social__link click">
+            <a
+              href="https://github.com/owlthinkabtit"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-brands fa-github"></i>
             </a>
-            <a href="./assets/David Bragg Resume.pdf" target="_blank" class="social__link click">
+            <a
+              href="./assets/David Bragg Resume.pdf"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-solid fa-file-pdf"></i>
             </a>
           </div>
@@ -73,10 +93,76 @@
         <i class="fa-solid fa-envelope"></i>
       </button>
       <a href="#projects" class="scroll">
-        <div class="scroll__icon click">
-        
-        </div>
+        <div class="scroll__icon click"></div>
       </a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+          <h3 class="modal__title modal__title--about">Let me introduce myself <div class="wave">👋</div></h3>
+          
+          <p class="modal__para">
+            I'm a 34 year old <i>American</i> <b class="orange">Frontend Software Engineer</b> with a decade of
+            IT support experience, bringing a <b class="orange">unique blend</b> of technical
+            expertise and user-focused problem-solving to web development.
+            <br />
+            Skilled in HTML, CSS, JavaScript, and React, I <b class="orange">specialize</b> in
+            building responsive, accessible, and dynamic web applications.
+            <b class="orange">My passion</b> lies in turning complex ideas into seamless user
+            experiences, leveraging APIs, and creating visually appealing,
+            interactive designs.
+            <br />
+            With a proven ability to <b class="orange">adapt and learn quickly</b>, I excel at
+            tackling challenges head-on and delivering polished, functional
+            solutions. I'm eager to bring my creativity, technical skills, and
+            dedication to a team that values <b class="orange">innovation</b> and
+            <b class="orange">growth</b>.
+          </p>
+          <div class="modal__languages">
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+              />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+              />
+              <span class="language__name">CSS</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
+              />
+              <span class="language__name">Javascript</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
+              />
+              <span class="language__name">React</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
+              />
+              <span class="language__name">Tailwindcss</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/redux/redux-original.svg"
+              />
+              <span class="language__name">Redux</span>
+            </figure>
+          </div>
+        </div>
+        <div class="modal__half modal__contact">Talk to me, I talk back.</div>
+      </div>
     </section>
     <section id="projects">
       <div class="container">
@@ -87,23 +173,106 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/moviepix.png" class="project__img">
+                <img src="./assets/moviepix.png" class="project__img" />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description__title">MoviePix</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, Tailwindcss, Javascript, React, Redux
+                  </h4>
+                  <p class="project__description--para">
+                    This project serves as the culmination of Week 6, designed
+                    to demonstrate my proficiency in the concepts covered up to
+                    that point. Key objectives included integrating data from an
+                    API, designing a site that effectively utilizes that
+                    information, and ensuring the application is dynamic. The
+                    project was built exclusively using HTML, CSS, JavaScript,
+                    and React, as per the guidelines provided.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/owlthinkabtit/wk6finalv2.git"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="https://wk6finalv2.vercel.app/"
+                      class="project__description--link"
+                    >
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/Internship Project.png"
+                  class="project__img"
+                />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description__title">
-                    MoviePix
+                    Ultraverse NFT World
                   </h3>
                   <h4 class="project__description--sub-title">
-                    Html, Tailwindcss, Javascript, React.js, Redux
+                    Html, CSS, Javascript, React
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit a, asperiores quos laudantium deserunt odit omnis maxime, nobis necessitatibus quas. Quaerat a exercitationem adipisci dicta veniam itaque possimus sed, delectus saepe.
+                    Transformed a completely static HTML, CSS, JavaScript, and
+                    React single page application into an interactive user
+                    interface using animations, transitions, and carousels. We
+                    processed API requests to dynamically represent data from a
+                    cloud server and represented it through skeleton loading
+                    states, pagination, and dynamic routing. Also utilized Git
+                    version control and the GitHub interface to work and thrive
+                    in a virtual and collaborative team environment.
                   </p>
                   <div class="project__description--links">
-                    <a href="https://github.com/owlthinkabtit/wk6finalv2.git" class="project__description--link">
+                    <a
+                      href="https://github.com/owlthinkabtit/jameka-internship.git"
+                      class="project__description--link"
+                    >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://wk6finalv2.vercel.app/" class="project__description--link">
+                    <a
+                      href="https://jameka-internship.vercel.app/"
+                      class="project__description--link"
+                    >
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/librarysite.png" class="project__img" />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description__title">Library</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, Javascript, React
+                  </h4>
+                  <p class="project__description--para">
+                    A react project that has been expanded upon from it's
+                    original version. Everything is dynamic, and the books now
+                    have their own information page. Also included a working
+                    shopping cart.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/owlthinkabtit/react-library.git"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="https://react-library-ecru.vercel.app/"
+                      class="project__description--link"
+                    >
                       <i class="fa-solid fa-link"></i>
                     </a>
                   </div>
@@ -114,5 +283,43 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+          <figure>
+            <img class="footer__logo--img" src="./assets/2947642.png" alt="" />
+          </figure>
+          <div class="footer__social--list">
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              GitHub
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              LinkedIn
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              Contact
+            </a>
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
+            >
+              Resume
+            </a>
+          </div>
+          <div class="footer__copyright">
+            Copyright &copy; 2025 Jameka Haggins
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
