--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jameka Haggins</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/993d4d649d.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/993d4d649d.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function() {
+          emailjs.init({
+          publicKey: "_elnIlISd3gQDPQMy",
+        });
+      })();
+    </script>
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./assets/2947642.png" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -26,19 +32,19 @@
           </li>
           <li class="nav__link">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Contact</a
             >
           </li>
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleContrast()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -53,7 +59,7 @@
           <h1 class="title title--secondary">
             <b class="green">I'm Jameka.</b>
           </h1>
-          <p class="header__para">
+          <p data-aos="fade-up" data-aos-anchor-placement="center-center" class="header__para">
             I'm a <b class="orange">Frontend Software Engineer</b> skilled in
             HTML, CSS, JavaScript, and React, with 10 years of IT support
             experience.
@@ -62,7 +68,7 @@
             and eager to bring technical expertise and problem-solving skills to
             create seamless user experiences.
             <br />
-            Here's a little more <b class="orange">about me</b>.
+            Here's a little more <b class="orange click" onclick="toggleModal()">about me</b>.
           </p>
           <div class="social__list">
             <a
@@ -89,9 +95,11 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
-        <i class="fa-solid fa-envelope"></i>
-      </button>
+      <a href="#">
+        <button class="mail__btn click" onclick="toggleModal()">
+          <i class="fa-solid fa-envelope"></i>
+        </button>
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -161,8 +169,48 @@
             </figure>
           </div>
         </div>
-        <div class="modal__half modal__contact">Talk to me, I talk back.</div>
+        <div class="modal__half modal__contact">
+          <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
+          <h3 class="modal__title modal__title--contact">
+            Drop a line!
+          </h3>
+          <h4 class="modal__sub-title modal__title--contact">
+            I am currently <b>open</b> to new opportunities.
+          </h4>
+          <form id="contact__form" onsubmit="contact(event)">
+            <div class="form__item">
+              <label class="form__item--label">Name</label>
+              <input class="input" name="user_name" type="text"></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Email</label>
+              <input class="input" name="user_email" type="email"></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Message</label>
+              <textarea class="input" name="message" type="text"></textarea>
+            </div>
+            <button id="contact__submit" class="form__submit">
+              Send it my way
+            </button>
+          </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fas fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay--success">
+            Thanks for the message; looking forward to speaking with you soon!
+          </div>
+        </div>
       </div>
+      <img src="./assets/semi circle.svg" class="shape shape--0">
+      <img src="./assets/circle.svg" class="shape shape--1">
+      <img src="./assets/squiggly.svg" class="shape shape--2">
+      <img src="./assets/circle.svg" class="shape shape--3">
+      <img src="./assets/triangle.svg" class="shape shape--4">
+      <img src="./assets/circle.svg" class="shape shape--5">
+      <img src="./assets/squiggly.svg" class="shape shape--6">
+      <img src="./assets/circle.svg" class="shape shape--7">
+      <img src="./assets/semi circle.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
@@ -291,25 +339,26 @@
           </figure>
           <div class="footer__social--list">
             <a
-              href="#"
+              href="https://github.com/owlthinkabtit" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               GitHub
             </a>
             <a
-              href="#"
+              href="https://www.linkedin.com/in/jamekahaggins" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               LinkedIn
             </a>
             <a
               href="#"
+              onclick="toggleModal()"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Contact
             </a>
             <a
-              href="#"
+              href="./assets/David Bragg Resume.pdf" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
@@ -321,5 +370,5 @@
         </div>
       </div>
     </footer>
-  </body>
+      </body>
 </html>
