Currently the resume tab is unavailable, will change that in the near future.

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               Contact
             </a>
             <a
-              href="./assets/David Bragg Resume.pdf" target="_blank"
+              href="#" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
