had to disable to resume social like for now too

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="./assets/David Bragg Resume.pdf"
+              href="#"
               target="_blank"
               class="social__link click"
             >
