--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="#"
+              href="./assets/JamekaHaggins2025.pdf"
               target="_blank"
               class="social__link click"
             >
@@ -349,7 +349,7 @@
               Contact
             </a>
             <a
-              href="#" target="_blank"
+              href="./assets/JamekaHaggins2025.pdf" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
